test_regress/t/t_property_s_eventually_unsup.out
%Error-UNSUPPORTED: t/t_property_s_eventually_unsup.v:14:35: Unsupported: cycle delay in s_eventually
                                                           : ... note: In instance 't'
   14 |   assert property (@(posedge clk) s_eventually ##1 1);
      |                                   ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_s_eventually_unsup.v:15:35: Unsupported: cycle delay in s_eventually
                                                           : ... note: In instance 't'
   15 |   assert property (@(negedge clk) s_eventually ##1 1);
      |                                   ^~~~~~~~~~~~
%Error: Exiting due to
